# Construct

./: .gitattributes  .gitignore  .periphery.yml  AGENTS.md  LICENSE.md  Makefile  Package.resolved  Package.swift  Podfile  README.md  buildServer.json  sourcery-gen.sh
App/: Construct.storekit  GoogleService-Info.example.plist  Package.swift
Construct/: AppDelegate.swift  Info.plist  SceneDelegate.swift
Construct.xcodeproj/: project.pbxproj
Construct.xcworkspace/: contents.xcworkspacedata
Server/: .dockerignore  AGENTS.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
Server/app/: __init__.py  main.py  schemas.py  security.py  settings.py
Server/app/iap/: catalog.py  models.py  products.json
Server/app/routers/: __init__.py  auth.py  iap.py  mech_muse.py
Server/app/services/: apple_transactions.py  usage.py
Server/infra/: README.md  main.tf  outputs.tf  variables.tf
Server/tests/: conftest.py  test_auth.py  test_main.py  test_mech_muse.py
Sourcery/: NavigationNode.stencil  Presented.stencil
SourceryTemplates/: DomainParsers.stencil  KeyValueStoreEntityDecoding.stencil  NavigationNode.stencil  ParseableGameModels.stencil  XMLDocumentElement.stencil
UnitTests/: AlignmentTest.swift  AppStoreScreenshotTests.swift  CampaignBrowserTest.swift  CompendiumImporterTest.swift  CreatureActionParserTest.swift  CreatureEditViewStateTest.swift  DDBCharacterDataSourceReaderTest.swift  DDBCharacterSheetURLParserTest.swift  DataSourceReaderParsersTest.swift  DatabaseTest.swift  DiceExpressionParserTest.swift  DiceExpressionTest.swift  Fixtures.swift  (+17 more)
(+723 files in other folders)
